bugfix: DEC-222: update column-gap to margin

--- a/projects/charon/src/app/hub/components/hub-header/hub-header.component.scss
+++ b/projects/charon/src/app/hub/components/hub-header/hub-header.component.scss
@@ -19,9 +19,12 @@
 
 .hub-header__bar-actions-container {
   align-items: center;
-  column-gap: $grid-step * 3;
   display: flex;
   overflow: hidden;
+}
+
+.hub-header__bar-actions-menu {
+  margin-left: $grid-step * 3;
 }
 
 .hub-header__bar-logo {
